Closed Bug 1622520 Opened 5 years ago Closed 5 years ago

SW-WR crashes on shutdown

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: lsalzman, Assigned: lsalzman)

References

Details

Attachments

(1 file)

Somehow this bug snuck in while I was making necessary fixes to land SW-WR. The Renderbuffer cleanup code should only run when it is explicitly deleted in DeleteRenderbuffer, and not when a Context is destroyed, since all objects will be deleted there anyway.

Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6b4b41968cc1 only run Renderbuffer cleanup code when erased. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: