Bug 1622520 - only run Renderbuffer cleanup code when erased. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D66868